--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.15.0",
-    "cypress-cucumber-preprocessor": "^4.3.1"
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "file-loader": "^6.2.0"
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^21.0.0",
@@ -23,6 +24,6 @@
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": false,
-    "stepDefinitions": "cypress/integration/duckduckgo.js"
+    "stepDefinitions": "cypress/integration"
   }
 }
