--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "author": "hendra",
   "license": "ISC",
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^21.0.2",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.3",
+    "@types/cypress": "^1.1.3",
     "cypress": "^13.15.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "ts-loader": "^9.5.1"
   },
   "dependencies": {
-    "@badeball/cypress-cucumber-preprocessor": "^21.0.0",
     "@cucumber/language-service": "^1.6.0",
     "prompt-sync": "^4.2.0"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": false,
-    "stepDefinitions": "cypress/integration"
+    "stepDefinitions": "cypress/support/step_definitions/**/*.js"
   }
 }
