--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cypress": "^1.1.3",
     "cypress": "^13.15.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-xpath": "^2.0.1",
     "file-loader": "^6.2.0",
     "ts-loader": "^9.5.1"
   },
